--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,20 +3,25 @@
 <h1>Register</h1>
 <form class="submission-form" action="/register" method="POST">
     <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name"
-        required>
+        <label for="name">First Name</label>
+        <input type="text" id="firstname" name="firstname" required>
+    </div>
+    <div>
+        <label for="name">Last Name</label>
+        <input type="text" id="lastname" name="lastname" required>
     </div>
     <div>
         <label for="email">Email</label>
-        <input type="email" id="email" name="email"
-        required>
+        <input type="email" id="email" name="email" required>
     </div>
     <div>
         <label for="password">Password</label>
-        <input type="password" id="password" name="password"
-        required>
+        <input type="password" id="password1" name="password1" required>
     </div>
-    <button type="submite">Register</button>
+    <div>
+        <label for="password">Password</label>
+        <input type="password" id="password2" name="password2" required>
+    </div>
+    <button type="submit">Register</button>
 </form>
-<a href="/login">Login</a> 
+<a href="/login">Login</a>
